# AmberSkyNet

./: .gitignore  CMakeLists.txt  clean_directories  index.html  params.json  z_clear.bat  z_optim.bat
docs/: about.htm  authors.htm  compil.htm  download.htm  index.htm  index_doc.htm  whereiam.htm
docs/arhitect/: ICamera.htm  IDataParser.htm  IDevice.htm  IDrawObject.htm  IEngine.htm  IEventListener.htm  IEventManager.htm  IFile.htm  IFileSystem.htm  ILog.htm  IMaterial.htm  IModifierPack.htm  INetProtocolHandler.htm  INetSupervisor.htm  INode.htm  INodeModifier.htm  ISound.htm  IWorld.htm  index.htm
docs/modules/: HTTP_Client.htm  asnDataParser.htm  asnDeviceGL.htm  asnEngine.htm  asnFileSystem.htm  asnLog.htm  asnNode3ds.htm  asnNodeGUI_Simple.htm  asnNodeSprite.htm  asnSound.htm  asnWorld.htm  index.htm
docs/steps/: asn_1.htm  asn_10.htm  asn_11.htm  asn_12.htm  asn_2.htm  asn_3.htm  asn_4.htm  asn_5.htm  asn_6.htm  asn_7.htm  asn_8.htm  asn_9.htm  index.htm
docs/web_site/: ambernet.css  index.htm  index.php  test.php
doxygen/: ambernet_doxy  ambernet_doxy_api
include/: ASN_Params.cpp  ASN_Params.h  ASN_Type_template.h  ASN_Types.h  CVector.h  EngineStarter.h  IAvatar.h  IBaseObject.h  ICamera.h  IDataParser.h  IDevice.h  IDrawObject.h  IEngine.h  IEventListener.h  IEventManager.h  IFile.h  IFileSystem.h  ILog.h  IManager.h  IMaterial.h  INetProtocolHandler.h  INetSupervisor.h  INode.h  INodeModifier.h  IPhysicManager.h  IResourceSystem.h  IScriptManager.h  ISound.h  IWorld.h  os_loadmodule.cpp  os_loadmodule.h
include/Interfaces/: ASNIGrid2D.h  ASNIMessenger.h  ASNITerrain.h  ASNIWorld3D.h  ASNInterface.h
projects/: AmberSkyNet_private.rc
projects/CMake/: CMakeLists.txt
projects/CodeBlocks/: AmberSkyNet.cbp  AmberSkyNetVR_in_one.workspace.old  AmberSkyNetVR_modules.workspace  asnALL.cbp  asnDeviceGl.cbp  asnEngine.cbp  asnFileZIP.cbp  asnNetHTTP.cbp  asnNetHTTP.cbp.cbTemp  asnNetIRC.cbp  asnNetSupervisor.cbp  asnNetSupervisor.cbp.cbTemp  asnNode3ds.cbp  asnNodeGUI_Simple.cbp  asnNodeHeightMap.cbp  asnNodeHeightMap.layout.backup  asnNodeRuler.cbp  asnNodeRuler.layout.backup  asnNodeSLTerrain.cbp  asnNodeSkyCube.cbp  asnNodeSprite.cbp  asnPhysicManager.cbp  asnPhysicManager.layout.backup  asnScriptManager.cbp  asnScriptManager.layout.backup  asnSound.cbp  asnWorld.cbp
projects_ext/AmberCannonid/: AmberCannonid.cbp  CMakeLists.txt  main.cpp  main.old
projects_ext/AmberCannonid/binl/: AmberSkyNet.ini  plugins
projects_ext/AmberCannonid/binw/: AmberSkyNet.ini
projects_ext/AmberCannonid/data/: base.xml  commonObjects.xml  pole.xml  pole_dat.xml
projects_ext/AmberCannonid/res/: background2.xcf  background3.xcf
projects_ext/ShootIt/: CMakeLists.txt  main.cpp
projects_ext/ShootIt/hide_pak/: World.xml  axe.3ds  base.xml  commonObjects.xml  gnome.3DS  map.xml
src/asnALL/: asnAll.cpp
src/asnCommon/: 3d_utils.cpp  ASN_List.h  ASN_SafeVector_template.h  ASN_SimpleModel.h  ASN_Types_internal.h  ASN_utils.cpp  ASN_utils.h  CBaseObject.cpp  CBaseObject.h  CBoundingBox.h  CNode.cpp  CNode.h  CTextlist.h  IAsnGenerator.h  IFileSource.h  Parser_utils.cpp  lod_terrain.cpp  lod_terrain.h  matrix.cpp  matrix.h  octree.cpp  octree.h  os_deps.cpp  os_deps.h  quaternion.cpp  quaternion.h
src/asnDeviceGL/: CCamera.cpp  CCamera.h  CDeviceGl.cpp  CDeviceGl.h  CDrawObject.cpp  CDrawObject.h  CEvListCamLooker.cpp  CEvListCamLooker.h  CEvListCamWalker.cpp  CEvListCamWalker.h  CEventManagerSDL.cpp  CEventManagerSDL.h  CFontTTF.cpp  CFontTTF.h  CFontTexture.cpp  CFontTexture.h  CMaterial.cpp  CMaterial.h  CTexture.cpp  CTexture.h  CTexturePack.cpp  CTexturePack.h  IFont.h  Primitive_libs.cpp  asnDeviceGl.cpp
src/asnEngine/: CEngine.cpp  CEngine.h  CPluginFactory.cpp  CPluginFactory.h  CResourceSystem.cpp  CResourceSystem.h  CSound_empty.h  CTextlist.cpp  asnEngine.cpp
src/asnEngine/asnDataParser/: CDataParserXML.cpp  CDataParserXML.h  asnDataParser.h
src/asnEngine/asnFileSystem/: CFile.cpp  CFile.h  CFileRemote.cpp  CFileRemote.h  CFileSource.cpp  CFileSource.h  CFileSystem.cpp  CFileSystem.h  CFileSystemASN.cpp  CFileSystemASN.h  asnFileSystem.h
src/asnEngine/asnLog/: CLog.cpp  CLog.h  asnLog.h
src/asnFileZIP/: CFileSourceZIP.cpp  CFileSourceZIP.h  CFileZIP.cpp  CFileZIP.h  asnFileSystem.cpp
src/asnMain/: data_driven.xml  main.cpp
src/asnNetHTTP/: CFileHTTP.cpp  CFileHTTP.h  CFileSourceHTTP.cpp  CFileSourceHTTP.h  HTTP_Client.cpp  HTTP_Client.h  asnHTTP.cpp
src/asnNetIRC/: IRC_replay.h  asnNetIRC.cpp  nh_irc.cpp  nh_irc.h
src/asnNetJabber/: asnNetJabber.cpp  base64.cpp  base64.cpp_old  base64.h  base64.h_old  md5.cpp  md5.h  nh_jabber.cpp  nh_jabber.h
src/asnNetSupervisor/: CNetSupervisor.cpp  CNetSupervisor.h  asnNetSupervisor.cpp
src/asnNode3ds/: CModel3ds.cpp  CModel3ds.h  CNode3ds.cpp  CNode3ds.h  asnNode3ds.cpp
src/asnNode3ds/lib/: l3ds.cpp  l3ds.h
src/asnNodeGUI_Simple/: CNodeGUI_TextBox.cpp  CNodeGUI_TextBox.h  asnNodeGUI_Simple.cpp
src/asnNodeHeightMap/: CNodeHeightMap.cpp  CNodeHeightMap.h  asnNodeHeightMap.cpp
src/asnNodeRuler/: CNodeRuler.cpp  CNodeRuler.h  asnNodeRuler.cpp  map_rulers.xml
src/asnNodeSLTerrain/: CNodeSLTerrain.cpp  CNodeSLTerrain.h  SLTerrainDef.h  asnNodeSLTerrain.cpp  asnNodeSLTerrain.sample.xml
src/asnNodeSkyCube/: CNodeSkyCube.cpp  CNodeSkyCube.h  asnNodeSkyCube.cpp
src/asnNodeSprite/: CNodeGrid2D.cpp  CNodeGrid2D.h  CNodeSprite.cpp  CNodeSprite.h  asnNodeSprite.cpp
src/asnPhysicManager/: CPhysicManagerODE.cpp  CPhysicManagerODE.h  asnPhysicManager.cpp
src/asnPhysicManager/olds/: CPhysicManager.cpp  CPhysicManager.h
src/asnScriptManager/: CScriptManagerLua.cpp  CScriptManagerLua.h  asnScriptManager.cpp
src/asnSound/: CSoundSDL_mixer.cpp  CSoundSDL_mixer.h  asnSound.cpp
src/asnWorld/: CModifierPack.cpp  CModifierPack.h  CModifiers.cpp  CModifiers.h  CWorld.cpp  CWorld.h  CWorldSimple3D.cpp  CWorldSimple3D.h  asnWorld.cpp
src/samples/RoboWorld/: CMakeLists.txt  RoboWorld.cbp  main.cpp  scripts.cpp
src/samples/TerrainTest/: CMakeLists.txt  TerrainTest.cbp  TerrainTest.cbp.cbTemp  main.cpp
(+1267 files in other folders)
