PROJECT (ShootIt)

INCLUDE_DIRECTORIES( ../../include/ )

#SET(CMAKE_VERBOSE_MAKEFILE "ON")

SET(CMAKE_CXX_FLAGS "-Os" )
ADD_DEFINITIONS( -fPIC)

SET(EXECUTABLE_OUTPUT_PATH "./bin" )

SET ( UTIL_DIR ../../src/asnCommon/ASN_utils.cpp )
AUX_SOURCE_DIRECTORY (../../include INC_DIR)
AUX_SOURCE_DIRECTORY (./ MAIN_DIR)

ADD_EXECUTABLE (ShootIt ${MAIN_DIR} ${INC_DIR} ${UTIL_DIR} )
TARGET_LINK_LIBRARIES(ShootIt -ldl)
